bug: fixed 2 scrollbar height issue |WTEL-829|
the problem was in transparent inline edit form under table

--- a/src/assets/css/modules/modules.scss
+++ b/src/assets/css/modules/modules.scss
@@ -10,6 +10,7 @@
 // main content itself, without nav but with main header
 .module {
   flex-grow: 1;
+  overflow-y: scroll;
 }
 
 // inner content section
